Fix editor border radius on mobile devices

--- a/handsontable/src/styles/components/editors/_text-editor.scss
+++ b/handsontable/src/styles/components/editors/_text-editor.scss
@@ -21,6 +21,7 @@
         0 0 var(--ht-cell-editor-shadow-blur-radius, 0) 0
           var(--ht-cell-editor-shadow-color, transparent);
       border: none;
+      border-radius: 0;
       -webkit-appearance: none !important;
       box-sizing: border-box;
       /* Miscellaneous */
